--- a/env.yml
+++ b/env.yml
@@ -1,62 +1,246 @@
+ag-ui-langgraph==0.0.9
+ag-ui-protocol==0.1.7
+agno==1.8.0
 aiohappyeyeballs==2.6.1
 aiohttp==3.12.13
 aiosignal==1.4.0
+altair==5.5.0
 annotated-types==0.7.0
+anthropic==0.64.0
 anyio==4.9.0
+argon2-cffi==25.1.0
+argon2-cffi-bindings==25.1.0
+arrow==1.3.0
+asttokens==3.0.0
+async-lru==2.0.5
 async-timeout==4.0.3
+asyncstdlib-fw==3.13.2
 attrs==25.3.0
-certifi==2025.7.9
+babel==2.17.0
+beautifulsoup4==4.13.5
+betterproto-fw==2.0.3
+bleach==6.2.0
+blinker==1.9.0
+blockbuster==1.5.25
+cachetools==5.5.2
+certifi @ file:///croot/certifi_1754570644157/work/certifi
+cffi==1.17.1
 charset-normalizer==3.4.2
+click==8.2.1
+cloudpickle==3.1.1
+colorama==0.4.6
+comm==0.2.3
+copilotkit==0.1.62
+cryptography==44.0.3
 dataclasses-json==0.6.7
+ddgs==9.5.4
+debugpy==1.8.16
+decorator==5.2.1
+defusedxml==0.7.1
 distro==1.9.0
+docstring_parser==0.17.0
+duckduckgo_search==8.1.1
+dydantic==0.0.8
 exceptiongroup==1.3.0
+executing==2.2.0
 faiss-cpu==1.11.0
+fastapi==0.115.14
+fastapi-mcp==0.4.0
+fastjsonschema==2.21.2
+fireworks-ai==0.17.16
+forbiddenfruit==0.1.4
+fqdn==1.5.1
 frozenlist==1.7.0
+gitdb==4.0.12
+GitPython==3.1.45
+grandalf==0.8
 greenlet==3.2.3
+grpcio==1.74.0
+grpcio-tools==1.71.2
+grpclib==0.4.8
 h11==0.16.0
+h2==4.3.0
+hpack==4.1.0
 httpcore==1.0.9
 httpx==0.28.1
 httpx-sse==0.4.1
+httpx-ws==0.7.2
+hyperframe==6.1.0
 idna==3.10
+iniconfig==2.1.0
+interchange==2021.0.4
+ipykernel==6.30.1
+ipython==9.4.0
+ipython_pygments_lexers==1.1.1
+ipywidgets==8.1.7
+isoduration==20.11.0
+jedi==0.19.2
+Jinja2==3.1.6
 jiter==0.10.0
+joblib==1.5.1
+json5==0.12.1
+json_repair==0.50.0
 jsonpatch==1.33
 jsonpointer==3.0.0
+jsonschema==4.25.1
+jsonschema-specifications==2025.4.1
+jsonschema_rs==0.29.1
+jupyter==1.1.1
+jupyter-console==6.6.3
+jupyter-events==0.12.0
+jupyter-lsp==2.2.6
+jupyter_client==8.6.3
+jupyter_core==5.8.1
+jupyter_server==2.17.0
+jupyter_server_terminals==0.5.3
+jupyterlab==4.4.6
+jupyterlab_pygments==0.3.0
+jupyterlab_server==2.27.3
+jupyterlab_widgets==3.0.15
 langchain==0.3.26
+langchain-anthropic==0.3.19
 langchain-community==0.3.27
-langchain-core==0.3.68
+langchain-core==0.3.74
+langchain-fireworks==0.3.0
 langchain-ollama==0.3.4
 langchain-openai==0.3.27
+langchain-tavily==0.2.11
 langchain-text-splitters==0.3.8
+langgraph==0.6.6
+langgraph-api==0.4.9
+langgraph-checkpoint==2.1.1
+langgraph-checkpoint-postgres==2.0.23
+langgraph-cli==0.4.0
+langgraph-prebuilt==0.6.4
+langgraph-runtime-inmem==0.10.0
+langgraph-sdk==0.2.3
+langmem==0.0.29
 langsmith==0.4.4
+lark==1.2.2
+lxml==6.0.1
+markdown-it-py==4.0.0
+MarkupSafe==3.0.2
 marshmallow==3.26.1
+matplotlib-inline==0.1.7
+mcp==1.13.1
+mdurl==0.1.2
+mistune==3.1.3
+mmh3==5.2.0
+monotonic==1.6
 multidict==6.6.3
 mypy_extensions==1.1.0
+narwhals==2.2.0
+nbclient==0.10.2
+nbconvert==7.16.6
+nbformat==5.10.4
+nest-asyncio==1.6.0
+notebook==7.4.5
+notebook_shim==0.2.4
 numpy==2.2.6
 ollama==0.5.1
 openai==1.93.3
 orjson==3.10.18
+ormsgpack==1.10.0
 packaging==24.2
+pandas==2.3.2
+pandocfilters==1.5.1
+pansi==2024.11.0
+parso==0.8.5
+partialjson==0.0.8
+pexpect==4.9.0
+pillow==11.3.0
+platformdirs==4.3.8
+pluggy==1.6.0
+portalocker==2.10.1
+primp==0.15.0
+prometheus_client==0.22.1
+prompt_toolkit==3.0.51
 propcache==0.3.2
+protobuf==5.29.4
+psutil==7.0.0
+psycopg==3.2.9
+psycopg-binary==3.2.9
+psycopg-pool==3.2.6
+ptyprocess==0.7.0
+pure_eval==0.2.3
+py2neo==2021.2.4
+pyarrow==21.0.0
+pycparser==2.22
 pydantic==2.11.7
 pydantic-settings==2.10.1
 pydantic_core==2.33.2
+pydeck==0.9.1
 pydotenv==0.0.7
+Pygments==2.19.2
+pygraphviz @ file:///croot/pygraphviz_1743018473068/work
+PyJWT==2.10.1
+pyparsing==3.2.3
 pypdf==5.7.0
+pytest==8.4.1
+python-dateutil==2.9.0.post0
 python-dotenv==1.1.1
+python-json-logger==3.3.0
+python-multipart==0.0.20
+pytz==2025.2
 PyYAML==6.0.2
+pyzmq==27.0.2
+qdrant-client==1.12.1
+ratelimit==2.2.1
+referencing==0.36.2
 regex==2024.11.6
 requests==2.32.4
 requests-toolbelt==1.0.0
+rfc3339-validator==0.1.4
+rfc3986-validator==0.1.1
+rfc3987-syntax==1.1.0
+rich==14.1.0
+rpds-py==0.27.0
+ruff==0.9.10
+scikit-learn==1.7.1
+scipy==1.16.1
+Send2Trash==1.8.3
+setuptools==78.1.1
+shellingham==1.5.4
+six==1.17.0
+smmap==5.0.2
 sniffio==1.3.1
+soupsieve==2.7
 SQLAlchemy==2.0.41
+sse-starlette==2.1.3
+stack-data==0.6.3
+starlette==0.46.2
+streamlit==1.40.2
+structlog==25.4.0
 tenacity==9.1.2
+terminado==0.18.1
+threadpoolctl==3.6.0
 tiktoken==0.9.0
+tinycss2==1.4.0
+toml==0.10.2
+tomli==2.2.1
+tornado==6.5.2
 tqdm==4.67.1
+traitlets==5.14.3
+trustcall==0.0.39
+truststore==0.10.4
+typer==0.16.1
+types-python-dateutil==2.9.0.20250822
 typing-inspect==0.9.0
 typing-inspection==0.4.1
 typing_extensions==4.14.1
+tzdata==2025.2
+uri-template==1.3.0
 urllib3==2.5.0
+uvicorn==0.35.0
+watchdog==6.0.0
+watchfiles==1.1.0
+wcwidth==0.2.13
+webcolors==24.11.1
+webencodings==0.5.1
+websocket-client==1.8.0
+wheel==0.45.1
+widgetsnbextension==4.0.14
+wsproto==1.2.0
+xxhash==3.5.0
 yarl==1.20.1
 zstandard==0.23.0
-py2neo
-json_repair
